--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,7 +14,9 @@
  *= require_self
  */
 
+
 @import "bootstrap-sprockets";
+@import "bootstrap";
 @import "summernote";
 
 .navbar.navbar-default {
