--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,7 +13,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
       <% if current_user %>
-        <li><%= link_to "Blogs", blogs_path %></li>
+        <li><%= link_to "Blogs", root_path %></li>
         <%= image_tag current_user.avatar_url %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.name || current_user.email %> <span class="caret"></span></a>
