--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -3,6 +3,7 @@
   <div class="form-inputs">
     <%= f.input :name %>
     <%= f.input :url %>
+    <%= f.input :logo %>
   </div>
 
   <div class="form-actions">
